Use "StripNamespaces ALL.cmd" and "ReadStripped SD ALL.cmd"
The mentioned two scripts are entirely new, despite
having the name of two old scripts, which in turn I
renamed to "StripNamespaces MAIN.cmd" and
"ReadStripped MAIN.cmd" respectively.

The two new scripts call each language specific
sub-script, so there's no longer need to call
them one by one manually.